# symbolic-eval

./: .gitignore  README.md  justfile  main.typ  typst.toml
examples/: eval_multiple_exprs.typ
justscripts/package/: mod.just
lib/: lib.typ
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: codec.rs  error.rs  evaluation.rs  lib.rs
