[package]
name = "symbolic-eval"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
ciborium = "0.2.2"
getrandom = { version = "0.3" } # match symbolica
hashbrown = { version = "0.17.1", features = ["serde"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_bytes = "0.11.19"
thiserror = "2.0.19"
wasm-minimal-protocol = "0.2.0"

[dependencies.symbolica]
git = "https://github.com/symbolica-dev/symbolica"
branch = "wasm2"
version = "2.0.0"
default-features = false
features = ["wasm"]

[profile.release]
lto = true        # Enable link-time optimization
strip = true      # Strip symbols from binary*
opt-level = 'z'   # Optimize for size
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
